--- a/task1.ipynb
+++ b/task1.ipynb
@@ -244,10 +244,10 @@
     "footballIndex = vectorizer.get_feature_names().index('football')\n",
     "\n",
     "hockeyPercent = numberOfSpecificWord(hockeyIndex)/len(data_matrix[0])\n",
-    "hockeyIndexCount = hockeyPercent*math.log(hockeyPercent)\n",
+    "hockeyIndexCount = (-1)*hockeyPercent*math.log(hockeyPercent)\n",
     "\n",
     "footballPercent = numberOfSpecificWord(footballIndex)/len(data_matrix[0])\n",
-    "footballIndexCount = hockeyPercent*math.log(footballPercent)\n",
+    "footballIndexCount = (-1)*footballPercent*math.log(footballPercent)\n",
     "\n",
     "pipeline_filename_writer.write('\\n(k)\\n'.encode())\n",
     "pipeline_filename_writer.write('Hockey:'.encode())\n",
@@ -395,10 +395,10 @@
     "footballIndex = vectorizer.get_feature_names().index('football')\n",
     "\n",
     "hockeyPercent = numberOfSpecificWord(hockeyIndex)/len(data_matrix[0])\n",
-    "hockeyIndexCount = hockeyPercent*math.log(hockeyPercent)\n",
+    "hockeyIndexCount = (-1)*hockeyPercent*math.log(hockeyPercent)\n",
     "\n",
     "footballPercent = numberOfSpecificWord(footballIndex)/len(data_matrix[0])\n",
-    "footballIndexCount = hockeyPercent*math.log(footballPercent)\n",
+    "footballIndexCount = (-1)*footballPercent*math.log(footballPercent)\n",
     "\n",
     "pipeline_filename_writer.write('\\n(k)\\n'.encode())\n",
     "pipeline_filename_writer.write('Hockey:'.encode())\n",
@@ -581,10 +581,10 @@
     "footballIndex = vectorizer.get_feature_names().index('football')\n",
     "\n",
     "hockeyPercent = numberOfSpecificWord(hockeyIndex,data_matrix_smoothed_0001)/len(data_matrix[0])\n",
-    "hockeyIndexCount = hockeyPercent*math.log(hockeyPercent)\n",
+    "hockeyIndexCount = (-1)*hockeyPercent*math.log(hockeyPercent)\n",
     "\n",
     "footballPercent = numberOfSpecificWord(footballIndex,data_matrix_smoothed_0001)/len(data_matrix[0])\n",
-    "footballIndexCount = hockeyPercent*math.log(footballPercent)\n",
+    "footballIndexCount = (-1)*footballPercent*math.log(footballPercent)\n",
     "\n",
     "pipeline_filename_writer.write('\\n(k)\\n'.encode())\n",
     "pipeline_filename_writer.write('Hockey:'.encode())\n",
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ee7016bb",
+   "id": "dec6686f",
    "metadata": {},
    "outputs": [
     {
@@ -773,10 +773,10 @@
     "footballIndex = vectorizer.get_feature_names().index('football')\n",
     "\n",
     "hockeyPercent = numberOfSpecificWord(hockeyIndex,data_matrix_smoothed_9)/len(data_matrix[0])\n",
-    "hockeyIndexCount = hockeyPercent*math.log(hockeyPercent)\n",
+    "hockeyIndexCount = (-1)*hockeyPercent*math.log(hockeyPercent)\n",
     "\n",
     "footballPercent = numberOfSpecificWord(footballIndex,data_matrix_smoothed_9)/len(data_matrix[0])\n",
-    "footballIndexCount = hockeyPercent*math.log(footballPercent)\n",
+    "footballIndexCount = (-1)*footballPercent*math.log(footballPercent)\n",
     "\n",
     "pipeline_filename_writer.write('\\n(k)\\n'.encode())\n",
     "pipeline_filename_writer.write('Hockey:'.encode())\n",
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dedacd8d",
+   "id": "4eaf19c0",
    "metadata": {},
    "outputs": [],
    "source": [
