finished module 6, 7 and 8 left to go

--- a/task2.ipynb
+++ b/task2.ipynb
@@ -83,39 +83,89 @@
     "\n",
     "y = drugs[\"Drug\"]\n",
     "del drugs[\"Drug\"]\n",
-    "x = drugs"
+    "x = drugs\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d05a6599",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "GaussianNB()"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    prediction  test_data\n",
+      "0            0          4\n",
+      "1            4          4\n",
+      "2            0          4\n",
+      "3            3          3\n",
+      "4            4          3\n",
+      "5            4          4\n",
+      "6            4          4\n",
+      "7            4          4\n",
+      "8            3          3\n",
+      "9            3          3\n",
+      "10           4          4\n",
+      "11           4          4\n",
+      "12           0          0\n",
+      "13           3          3\n",
+      "14           4          4\n",
+      "15           3          3\n",
+      "16           3          3\n",
+      "17           3          3\n",
+      "18           1          1\n",
+      "19           2          2\n",
+      "20           0          0\n",
+      "21           4          4\n",
+      "22           0          0\n",
+      "23           3          3\n",
+      "24           4          4\n",
+      "25           4          4\n",
+      "26           4          4\n",
+      "27           3          3\n",
+      "28           2          4\n",
+      "29           1          4\n",
+      "30           2          2\n",
+      "31           2          2\n",
+      "32           3          3\n",
+      "33           0          4\n",
+      "34           4          4\n",
+      "35           1          1\n",
+      "36           4          4\n",
+      "37           1          1\n",
+      "38           1          4\n",
+      "39           3          3\n",
+      "40           0          0\n",
+      "41           2          4\n",
+      "42           4          4\n",
+      "43           3          3\n",
+      "44           2          4\n",
+      "45           4          4\n",
+      "46           0          1\n",
+      "47           4          4\n",
+      "48           2          2\n",
+      "49           2          4\n"
+     ]
     }
    ],
    "source": [
+    "# 6(a)\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y)\n",
     "                \n",
-    "model = GaussianNB()\n",
+    "gauss = GaussianNB()\n",
+    "gauss.fit(x_train, y_train)\n",
     "\n",
-    "model.fit(x_train,y_train)\n"
+    "prediction = gauss.predict(x_test)\n",
+    "predictionTable = pandas.DataFrame({'prediction':prediction,'test_data':y_test.values}, columns=[\"prediction\",\"test_data\"])\n",
+    "print(predictionTable)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "ff4b8e21",
    "metadata": {},
    "outputs": [
@@ -125,66 +175,388 @@
      "text": [
       "    prediction  test_data\n",
       "0            4          4\n",
-      "1            2          2\n",
+      "1            4          4\n",
       "2            4          4\n",
-      "3            4          4\n",
-      "4            4          4\n",
+      "3            3          3\n",
+      "4            4          3\n",
       "5            4          4\n",
-      "6            3          3\n",
-      "7            3          3\n",
-      "8            4          4\n",
+      "6            4          4\n",
+      "7            4          4\n",
+      "8            3          3\n",
       "9            3          3\n",
-      "10           0          0\n",
-      "11           3          3\n",
-      "12           2          4\n",
-      "13           4          4\n",
-      "14           3          3\n",
-      "15           4          4\n",
+      "10           4          4\n",
+      "11           4          4\n",
+      "12           0          0\n",
+      "13           3          3\n",
+      "14           4          4\n",
+      "15           3          3\n",
       "16           3          3\n",
-      "17           4          4\n",
-      "18           4          3\n",
-      "19           3          3\n",
-      "20           3          3\n",
+      "17           3          3\n",
+      "18           1          1\n",
+      "19           2          2\n",
+      "20           0          0\n",
       "21           4          4\n",
-      "22           4          4\n",
-      "23           4          4\n",
-      "24           3          3\n",
-      "25           3          3\n",
-      "26           0          0\n",
-      "27           1          0\n",
+      "22           0          0\n",
+      "23           3          3\n",
+      "24           4          4\n",
+      "25           4          4\n",
+      "26           4          4\n",
+      "27           3          3\n",
       "28           4          4\n",
-      "29           1          4\n",
-      "30           0          0\n",
-      "31           4          4\n",
-      "32           4          4\n",
+      "29           4          4\n",
+      "30           2          2\n",
+      "31           2          2\n",
+      "32           3          3\n",
       "33           4          4\n",
-      "34           1          1\n",
+      "34           4          4\n",
       "35           1          1\n",
-      "36           3          3\n",
-      "37           3          3\n",
+      "36           4          4\n",
+      "37           1          1\n",
       "38           4          4\n",
-      "39           0          0\n",
-      "40           4          4\n",
+      "39           3          3\n",
+      "40           0          0\n",
       "41           4          4\n",
-      "42           0          0\n",
-      "43           1          4\n",
-      "44           1          1\n",
-      "45           2          4\n",
-      "46           3          4\n",
+      "42           4          4\n",
+      "43           3          3\n",
+      "44           4          4\n",
+      "45           4          4\n",
+      "46           0          1\n",
       "47           4          4\n",
-      "48           4          4\n",
-      "49           2          2\n"
+      "48           2          2\n",
+      "49           4          4\n"
      ]
     }
    ],
    "source": [
-    "prediction = model.predict(x_test)\n",
+    "# 6(b)\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "                \n",
+    "dtc = DecisionTreeClassifier()\n",
+    "dtc.fit(x_train, y_train)\n",
     "\n",
-    "predictionDf = pandas.DataFrame(prediction, columns=[\"prediction\"])\n",
-    "\n",
-    "predictionDf = pandas.DataFrame({'prediction':prediction,'test_data':y_test.values}, columns=[\"prediction\",\"test_data\"]).transpose()\n",
-    "print(predictionDf.transpose())\n"
+    "prediction = dtc.predict(x_test)\n",
+    "predictionTable = pandas.DataFrame({'prediction':prediction,'test_data':y_test.values}, columns=[\"prediction\",\"test_data\"])\n",
+    "print(predictionTable)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8e3168e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n",
+      "    prediction  test_data\n",
+      "0            4          4\n",
+      "1            4          4\n",
+      "2            4          4\n",
+      "3            3          3\n",
+      "4            4          3\n",
+      "5            4          4\n",
+      "6            4          4\n",
+      "7            4          4\n",
+      "8            3          3\n",
+      "9            3          3\n",
+      "10           4          4\n",
+      "11           4          4\n",
+      "12           0          0\n",
+      "13           3          3\n",
+      "14           4          4\n",
+      "15           3          3\n",
+      "16           3          3\n",
+      "17           3          3\n",
+      "18           1          1\n",
+      "19           2          2\n",
+      "20           0          0\n",
+      "21           4          4\n",
+      "22           0          0\n",
+      "23           3          3\n",
+      "24           4          4\n",
+      "25           4          4\n",
+      "26           4          4\n",
+      "27           3          3\n",
+      "28           4          4\n",
+      "29           4          4\n",
+      "30           2          2\n",
+      "31           2          2\n",
+      "32           3          3\n",
+      "33           4          4\n",
+      "34           4          4\n",
+      "35           1          1\n",
+      "36           4          4\n",
+      "37           1          1\n",
+      "38           4          4\n",
+      "39           3          3\n",
+      "40           0          0\n",
+      "41           4          4\n",
+      "42           4          4\n",
+      "43           3          3\n",
+      "44           4          4\n",
+      "45           4          4\n",
+      "46           0          1\n",
+      "47           4          4\n",
+      "48           2          2\n",
+      "49           4          4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6(c)\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = {'criterion': ['entropy'],  \n",
+    "              'max_depth': [3, 4], \n",
+    "              'min_samples_split': [3, 4, 5]}  \n",
+    "grid = GridSearchCV(DecisionTreeClassifier(), param_grid, refit = True, verbose = 3,n_jobs=-1) \n",
+    "grid.fit(x_train, y_train) \n",
+    " \n",
+    "prediction = grid.predict(x_test)\n",
+    "predictionTable = pandas.DataFrame({'prediction':prediction,'test_data':y_test.values}, columns=[\"prediction\",\"test_data\"])\n",
+    "print(predictionTable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3a976a63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    prediction  test_data\n",
+      "0            4          4\n",
+      "1            4          4\n",
+      "2            4          4\n",
+      "3            2          3\n",
+      "4            2          3\n",
+      "5            4          4\n",
+      "6            4          4\n",
+      "7            4          4\n",
+      "8            2          3\n",
+      "9            2          3\n",
+      "10           2          4\n",
+      "11           4          4\n",
+      "12           2          0\n",
+      "13           2          3\n",
+      "14           4          4\n",
+      "15           2          3\n",
+      "16           2          3\n",
+      "17           2          3\n",
+      "18           2          1\n",
+      "19           2          2\n",
+      "20           4          0\n",
+      "21           4          4\n",
+      "22           4          0\n",
+      "23           2          3\n",
+      "24           4          4\n",
+      "25           4          4\n",
+      "26           4          4\n",
+      "27           2          3\n",
+      "28           2          4\n",
+      "29           2          4\n",
+      "30           2          2\n",
+      "31           2          2\n",
+      "32           2          3\n",
+      "33           4          4\n",
+      "34           4          4\n",
+      "35           2          1\n",
+      "36           4          4\n",
+      "37           2          1\n",
+      "38           2          4\n",
+      "39           2          3\n",
+      "40           2          0\n",
+      "41           2          4\n",
+      "42           2          4\n",
+      "43           2          3\n",
+      "44           4          4\n",
+      "45           4          4\n",
+      "46           2          1\n",
+      "47           4          4\n",
+      "48           2          2\n",
+      "49           2          4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6(d)\n",
+    "from sklearn.linear_model import Perceptron\n",
+    "\n",
+    "perc = Perceptron() \n",
+    "perc.fit(x_train, y_train) \n",
+    " \n",
+    "prediction = perc.predict(x_test)\n",
+    "predictionTable = pandas.DataFrame({'prediction':prediction,'test_data':y_test.values}, columns=[\"prediction\",\"test_data\"])\n",
+    "print(predictionTable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "964949de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    prediction  test_data\n",
+      "0            4          4\n",
+      "1            4          4\n",
+      "2            4          4\n",
+      "3            3          3\n",
+      "4            1          3\n",
+      "5            4          4\n",
+      "6            4          4\n",
+      "7            4          4\n",
+      "8            3          3\n",
+      "9            3          3\n",
+      "10           4          4\n",
+      "11           4          4\n",
+      "12           4          0\n",
+      "13           3          3\n",
+      "14           4          4\n",
+      "15           3          3\n",
+      "16           3          3\n",
+      "17           3          3\n",
+      "18           1          1\n",
+      "19           3          2\n",
+      "20           4          0\n",
+      "21           4          4\n",
+      "22           4          0\n",
+      "23           3          3\n",
+      "24           4          4\n",
+      "25           4          4\n",
+      "26           4          4\n",
+      "27           3          3\n",
+      "28           4          4\n",
+      "29           1          4\n",
+      "30           3          2\n",
+      "31           3          2\n",
+      "32           3          3\n",
+      "33           4          4\n",
+      "34           4          4\n",
+      "35           1          1\n",
+      "36           4          4\n",
+      "37           1          1\n",
+      "38           4          4\n",
+      "39           3          3\n",
+      "40           0          0\n",
+      "41           4          4\n",
+      "42           4          4\n",
+      "43           3          3\n",
+      "44           4          4\n",
+      "45           4          4\n",
+      "46           0          1\n",
+      "47           4          4\n",
+      "48           3          2\n",
+      "49           4          4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6(e)\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "# we added max_iter due to an error occuring when default = 200\n",
+    "mlp = MLPClassifier(hidden_layer_sizes = (100,), activation = 'logistic', solver = 'sgd', max_iter=10000) \n",
+    "mlp.fit(x_train, y_train) \n",
+    " \n",
+    "prediction = mlp.predict(x_test)\n",
+    "predictionTable = pandas.DataFrame({'prediction':prediction,'test_data':y_test.values}, columns=[\"prediction\",\"test_data\"])\n",
+    "print(predictionTable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8d07fd28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 8 candidates, totalling 40 fits\n",
+      "    prediction  test_data\n",
+      "0            4          4\n",
+      "1            4          4\n",
+      "2            4          4\n",
+      "3            3          3\n",
+      "4            4          3\n",
+      "5            4          4\n",
+      "6            4          4\n",
+      "7            4          4\n",
+      "8            3          3\n",
+      "9            3          3\n",
+      "10           4          4\n",
+      "11           4          4\n",
+      "12           0          0\n",
+      "13           3          3\n",
+      "14           4          4\n",
+      "15           3          3\n",
+      "16           3          3\n",
+      "17           3          3\n",
+      "18           1          1\n",
+      "19           2          2\n",
+      "20           0          0\n",
+      "21           4          4\n",
+      "22           0          0\n",
+      "23           3          3\n",
+      "24           4          4\n",
+      "25           4          4\n",
+      "26           4          4\n",
+      "27           3          3\n",
+      "28           4          4\n",
+      "29           1          4\n",
+      "30           2          2\n",
+      "31           2          2\n",
+      "32           3          3\n",
+      "33           4          4\n",
+      "34           4          4\n",
+      "35           1          1\n",
+      "36           4          4\n",
+      "37           1          1\n",
+      "38           4          4\n",
+      "39           3          3\n",
+      "40           0          0\n",
+      "41           4          4\n",
+      "42           4          4\n",
+      "43           3          3\n",
+      "44           4          4\n",
+      "45           4          4\n",
+      "46           0          1\n",
+      "47           4          4\n",
+      "48           1          2\n",
+      "49           4          4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6(f)\n",
+    "param_grid = {'activation': ['identity', 'logistic', 'tanh', 'relu'],  \n",
+    "              'hidden_layer_sizes': [(30, 50), (10, 10, 10)], \n",
+    "              'solver': ['adam']}  \n",
+    "mlp_grid = GridSearchCV(MLPClassifier(max_iter=10000), param_grid, refit = True, verbose = 3,n_jobs=-1) \n",
+    "mlp_grid.fit(x_train, y_train) \n",
+    " \n",
+    "prediction = mlp_grid.predict(x_test)\n",
+    "predictionTable = pandas.DataFrame({'prediction':prediction,'test_data':y_test.values}, columns=[\"prediction\",\"test_data\"])\n",
+    "print(predictionTable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc5850de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
