--- a/task2.ipynb
+++ b/task2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "bef5119a",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
     "plt.xlabel(\"Drugs\")\n",
     "plt.ylabel(\"Count\")\n",
     "plt.title(\"Class instances\")\n",
-    "\n",
+    "plt.savefig(\"drugs-distribution.pdf\")\n",
     "print(drugs)\n",
     "\n",
     "labelEncoder = preprocessing.LabelEncoder();\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b60a5a15",
+   "id": "cfba066a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "625576f0",
+   "id": "8fc7a2fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "181d1f72",
+   "id": "bd0e47e2",
    "metadata": {},
    "outputs": [],
    "source": []
